--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,10 @@
     "@types/morgan": "^1.9.4",
     "@types/qs": "^6.9.14",
     "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
