--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -22,5 +22,6 @@
       "noFallthroughCasesInSwitch": true
     },
     "include": ["src", "config"],
+    "exclude": ["node_modules"],
     "references": [{ "path": "./tsconfig.node.json" }]
   }
