--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -22,7 +22,7 @@
       "noUnusedParameters": true,
       "noFallthroughCasesInSwitch": true
     },
-    "include": ["src", "config"],
+    "include": ["src"],
     "exclude": ["node_modules"],
     "references": [{ "path": "./tsconfig.node.json" }]
   }
