--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,6 +23,5 @@
       "noFallthroughCasesInSwitch": true
     },
     "include": ["src"],
-    "exclude": ["node_modules"],
-    "references": [{ "path": "./tsconfig.node.json" }]
+    "exclude": ["node_modules"]
   }
