updated package.json build script and removed unused var secret from RefreshToken model

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "npm install && tsc",
+    "build": "npm install && tsc -b",
     "start": "node dist/index.js"
   },
   "author": "",
