--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "npm install && tsc -b && ls dist",
+    "build": "npm install && tsc && ls dist",
     "start": "node src/index.js"
   },
   "author": "",
