--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "npm install && tsc && ls dist",
-    "start": "node src/index.js"
+    "build": "npm install && tsc",
+    "start": "node dist/src/index.js"
   },
   "author": "",
   "license": "ISC",
