added config to include array in tsconfig.json

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -20,6 +20,6 @@
       "noUnusedParameters": true,
       "noFallthroughCasesInSwitch": true
     },
-    "include": ["src"],
+    "include": ["src", "config"],
     "exclude": ["node_modules"]
   }
