--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "npm install && tsc",
-    "start": "node dist/src/index.js"
+    "start": "node dist/index.js"
   },
   "type": "module",
   "author": "",
@@ -35,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
+    "@types/node": "^20.11.30",
     "@types/qs": "^6.9.14",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
